Fixed overflow issue, changed primary colour to blue

--- a/docs/_assets/_styles/_sass/globals/_variables.scss
+++ b/docs/_assets/_styles/_sass/globals/_variables.scss
@@ -2,8 +2,9 @@
   font-size: 1.15rem;
 }
 
-$blue: #3581B8;
-$warning: #FF6978;
+$blue: #48BEFF;
+// $warning: #FF6978;
+$warning: #2EC0F9;
 
 // 2. Setup your own variables
 $background: #FFFFFF;
